; ModuleID = '/home/carl/AnghaBench/vlc/src/input/extr_decoder.c_ModuleThread_QueueAudio.c'
source_filename = "/home/carl/AnghaBench/vlc/src/input/extr_decoder.c_ModuleThread_QueueAudio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.decoder_owner = type { i32 }

@VLC_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*)* @ModuleThread_QueueAudio to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ModuleThread_QueueAudio(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.decoder_owner*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = call %struct.decoder_owner* @dec_get_owner(i32* %7)
  store %struct.decoder_owner* %8, %struct.decoder_owner** %5, align 8
  %9 = load %struct.decoder_owner*, %struct.decoder_owner** %5, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = call i32 @ModuleThread_PlayAudio(%struct.decoder_owner* %9, i32* %10)
  store i32 %11, i32* %6, align 4
  %12 = load %struct.decoder_owner*, %struct.decoder_owner** %5, align 8
  %13 = load i32, i32* %6, align 4
  %14 = load i32, i32* @VLC_SUCCESS, align 4
  %15 = icmp ne i32 %13, %14
  %16 = zext i1 %15 to i32
  %17 = call i32 @ModuleThread_UpdateStatAudio(%struct.decoder_owner* %12, i32 %16)
  ret void
}

declare dso_local %struct.decoder_owner* @dec_get_owner(i32*) #1

declare dso_local i32 @ModuleThread_PlayAudio(%struct.decoder_owner*, i32*) #1

declare dso_local i32 @ModuleThread_UpdateStatAudio(%struct.decoder_owner*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
